[package]
name = "lorerunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72" }
# Logging
env_logger = "0.10.0"
# Logging
log = { version = "0.4.19" }
# Time
time = { version = "0.3.23", features = [
	"serde",
	"formatting",
	"std",
	"parsing",
] }
