[package]
name = "lorerunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72" }

# AWS crates
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-codedeploy = { version = "1.10.0" }
aws-sdk-iam = { version = "1.9.1" }
aws-sdk-ec2 = { version = "1.13.0" }

# Logging
env_logger = "0.10.0"
# Easy to use, secure, non opinionated JWT (JSON Web Tokens) implementation for Rust.
jwt-simple = "0.11.7"
# Logging
log = { version = "0.4.20" }
# Rusty Object Notation
ron = { version = "0.8.1" }
serde = { version = "1", features = ["derive"] }
# Time
time = { version = "0.3.29", features = [
	"serde",
	"formatting",
	"std",
	"parsing",
] }
# Simple, safe HTTP client
ureq = { version = "2.8.0", features = ["json", "tls"] }
tokio = { version = "1", features = ["full"] }
